RESOLVED FIXED231923
r284315 can cause build break.
https://bugs.webkit.org/show_bug.cgi?id=231923
Summary r284315 can cause build break.
Jigen Zhou
Reported 2021-10-18 17:05:32 PDT
Commit ecbb6e69c1bda8ac90a08f7e857207596b9b9c5 (2021-10-16 12:39 Use inline iterator for SVG reverse BiDI reordering) causes build break in our local build: In file included from WebCore/DerivedSources/unified-sources/UnifiedSource-4babe430-7.cpp:1: In file included from C:/work/webkit/jenkins/neko/Source/WebCore\Modules/highlight/AppHighlightStorage.cpp:46: In file included from C:/work/webkit/jenkins/neko/Source/WebCore/editing\TextIterator.h:30: C:/work/webkit/jenkins/neko/Source/WebCore/layout/integration\InlineIteratorLogicalOrderTraversal.h:76:32: error: member access into incomplete type 'const WebCore::RenderBlockFlow' if (line->containingBlock().style().rtlOrdering() == Order::Visual) ^ C:/work/webkit/jenkins/neko/Source/WebCore/page/FrameViewLayoutContext.h:39:7: note: forward declaration of 'WebCore::RenderBlockFlow' class RenderBlockFlow; ^ 1 error generated.
Attachments
Patch to fix build break. (1.55 KB, patch)
2021-10-18 18:04 PDT, Jigen Zhou
no flags
Patch to fix build break. (1.60 KB, patch)
2021-10-19 09:41 PDT, Jigen Zhou
no flags
Patch to fix build break. (1.54 KB, patch)
2021-10-19 18:28 PDT, Jigen Zhou
no flags
Patch for landing (1.67 KB, patch)
2021-10-19 18:55 PDT, Michael Catanzaro
no flags
Jigen Zhou
Comment 1 2021-10-18 18:04:06 PDT
Created attachment 441667 [details] Patch to fix build break.
Jigen Zhou
Comment 2 2021-10-19 09:41:33 PDT
Created attachment 441742 [details] Patch to fix build break.
Fujii Hironori
Comment 3 2021-10-19 13:59:30 PDT
Comment on attachment 441742 [details] Patch to fix build break. View in context: https://bugs.webkit.org/attachment.cgi?id=441742&action=review > Source/WebCore/ChangeLog:11 > + ecbb6e69c1bda8ac90a08f7e857207596b9b9c5 has access to RenderBlockFLow's method WebKit doesn't have such commit. https://github.com/WebKit/WebKit/commit/ecbb6e69c1bda8ac90a08f7e857207596b9b9c5 No one uses Git hash to point revision. Use Identifiers (243111@main), or SVN revision (r284315). https://github.com/WebKit/WebKit/wiki/Source-Control#identifiers > Source/WebCore/layout/integration/InlineIteratorLogicalOrderTraversal.h:30 > +#include "RenderBlockFlow.h" This file doesn't use RenderBlockFlow. I think this is wrong fix.
Fujii Hironori
Comment 4 2021-10-19 14:07:52 PDT
Comment on attachment 441742 [details] Patch to fix build break. View in context: https://bugs.webkit.org/attachment.cgi?id=441742&action=review >> Source/WebCore/layout/integration/InlineIteratorLogicalOrderTraversal.h:30 >> +#include "RenderBlockFlow.h" > > This file doesn't use RenderBlockFlow. I think this is wrong fix. May bad. This fix looks good.
Jigen Zhou
Comment 5 2021-10-19 18:28:35 PDT
Created attachment 441831 [details] Patch to fix build break.
Michael Catanzaro
Comment 6 2021-10-19 18:54:11 PDT
I'm not sure how you generated this patch, but it seems to be malformed. I'll reupload this manually.
Myles C. Maxfield
Comment 7 2021-10-19 18:55:19 PDT
Looks like the boys are having trouble applying the patch
Michael Catanzaro
Comment 8 2021-10-19 18:55:37 PDT
Created attachment 441835 [details] Patch for landing
Myles C. Maxfield
Comment 9 2021-10-19 18:55:48 PDT
*bots
Jigen Zhou
Comment 10 2021-10-19 19:04:03 PDT
(In reply to Michael Catanzaro from comment #8) > Created attachment 441835 [details] > Patch for landing Thanks. I broke my previous patch with a manual modification (to use svn revison as reference as Fujii-san suggested).
EWS
Comment 11 2021-10-19 20:04:08 PDT
Committed r284515 (243258@main): <https://commits.webkit.org/243258@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441835 [details].
Radar WebKit Bug Importer
Comment 12 2021-10-19 20:05:18 PDT
Note You need to log in before you can comment on or make changes to this bug.