r284315 can cause build break. https://bugs.webkit.org/show_bug.cgi?id=231923

Patch by Jigen Zhou <jigen.zhou@sony.com> on 2021-10-19
Reviewed by Michael Catanzaro.

Class 'WebCore::RenderBlockFlow' was forward declared in header file
InlineIteratorLogicalOrderTraversal.h, but template
leafBoxesInLogicalOrder that was added by r284315 has access to RenderBlockFLow's method
style() and can cause build break in our local webkit build.

The build can be fixed when the concreate declaration of class
RenderBlockFlow is included in InlineIteratorLogicalOrderTraversal.h.

* layout/integration/InlineIteratorLogicalOrderTraversal.h:

Canonical link: https://commits.webkit.org/243258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284515 268f45cc-cd09-0410-ab3c-d52691b4dbfc