Source/WebCore/layout/integration/InlineIteratorLogicalOrderTraversal.h
@@ -27,6 +27,7 @@
 
 #include "InlineIteratorLine.h"
 #include "InlineIteratorTextBox.h"
+#include "RenderBlockFlow.h"
 
 namespace WebCore {
 namespace InlineIterator {
